@@ -12,6 +12,7 @@ define( function( require ) {
   // modules
   var Beaker = require( 'PH_SCALE/common/model/Beaker' );
   var Dimension2 = require( 'DOT/Dimension2' );
+  var inherit = require( 'PHET_CORE/inherit' );
   var Property = require( 'AXON/Property' );
   var Solute = require( 'PH_SCALE/common/model/Solute' );
   var Solution = require( 'PH_SCALE/common/model/Solution' );
@@ -28,13 +29,11 @@ define( function( require ) {
     thisModel.solution = new Solution( new Property( Solute.createCustom( 7 ) ), 0.5, 0, thisModel.beaker.volume );
   }
 
-  CustomModel.prototype = {
+  return inherit( Object, CustomModel, {
 
     reset: function() {
       this.beaker.reset();
       this.solution.reset();
     }
-  };
-
-  return CustomModel;
+  } );
 } );
